--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
 body {
-	background-color: #212529;
-	font-family: arial, helvetica, sans-serif;
+	background-color:#212529;
+	color:#fff;
+	font-family:arial,helvetica,sans-serif;
+	text-align:center;
+}
+
+h1 {
+	font-size:30px;
+	font-weight:bold;
 }
 
 p {
-	color: #FFFFFF;
-	margin: 20px;
+	font-size:18px;
+}
+
+a {
+	font-weight:bold;
+	text-decoration:none;
+}
+
+a:hover {
+	text-decoration:underline;
+}
+
+a:visited {
+	color:#fff;
 }
