--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-body {
+body, html {
 	background-color:#212529;
 	color:#fff;
 	font-family:sans-serif;
 	text-align:center;
+	height: 100%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	overflow: auto;
 }
 h1,p,.logo {
 	margin-top:25px;
