--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body, html {
 	font-family:sans-serif;
 	text-align:center;
 	height:100%;
-	width:100%;
+	width:95%;
 	padding:0;
-	margin:0;
+	margin:auto;
 	overflow:auto;
 }
 h1,p,.logo {
@@ -36,7 +36,8 @@ img.logo {
 	font-size:12px;
 	margin:auto;
 	margin-top:25px;
-	width:50%;
+	margin-bottom:25px;
+	max-width:1000px;
 }
 .impressum h1 {
 	font-size:20px;
@@ -46,10 +47,9 @@ img.logo {
 }
 .footer {
 	position:absolute;
-	bottom:0;
+	bottom:25px;
+	left:0;
 	right:0;
-    left:0;
-	margin:25px;
 	font-size:8px;
 	font-weight:normal;
 	color:#525b65 !important;
