--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@ body, html {
 	color:#fff;
 	font-family:sans-serif;
 	text-align:center;
+	width:100%;
 	height:100%;
-	width:95%;
 	padding:0;
 	margin:auto;
 	overflow:auto;
 }
 h1,p,.logo {
 	margin-top:25px;
+	margin-left:20px;
+	margin-right:20px;
 }
 h1 {
 	font-size:30px;
@@ -33,8 +35,10 @@ a.link {
 	color:#000;
 	padding:12px 18px;
 	border-radius:50px;
-	margin-top:10px;
+	margin-top:12px;
 	text-decoration:none;
+	min-width:270px;
+	font-size:14px;
 }
 a.link:hover {
 	background-color:#fff;
