--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body, html {
-	background-color:#22272B; /*210° 21% 17%**/
+	background-color:#262B30; /*210° 21% 19%**/
 	color:#fff;
 	font-family:sans-serif;
 	text-align:center;
